--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:         "https://neepuitl.github.io/"
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
- - contact.html
+ - team.md
 
 # Optional features
 animated:             false
